force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Resolution__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Resolution__c</fullName>
    <description>Records whether a given NC was effective, ineffective or voided.</description>
    <inlineHelpText>Description of how the problem has been addressed by the NC.</inlineHelpText>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>compliancequest__Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Effective</fullName>
            </value>
            <value>
                <fullName>Ineffective</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>