force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Response_Required__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Response_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if finding requires formal response</description>
    <label>Needs Acknowledgment</label>
    <type>Checkbox</type>
</CustomField>