force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Risk_Justification__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Risk_Justification__c</fullName>
    <description>It is the explanation provided by the Customer why the Finding is such Risky as indicated by Risk Level.</description>
    <label>Risk Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>