force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Risk_Level__c</fullName>
    <description>Computes the value of Risk Level using Severity and Probability i.e. Risk Level = Severity * Probability</description>
    <formula>VALUE(LEFT(TEXT( compliancequest__Severity__c), 1)) * VALUE(LEFT(TEXT( compliancequest__Probability__c ), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>