force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Severity__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Severity__c</fullName>
    <description>Records the severity of the finding</description>
    <label>Severity/Consequence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Negligible</fullName>
            </value>
            <value>
                <fullName>2 - Low</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4 - Significant</fullName>
            </value>
            <value>
                <fullName>5 - Catastrophic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>