force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Account__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this NC is of Supplier type records the Supplier Account that is related to this NC.</description>
    <inlineHelpText>The supplier or customer relating to the NC.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Nonconformance</relationshipLabel>
    <relationshipName>SQX_Non_conformances</relationshipName>
    <type>Lookup</type>
</CustomField>