force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Approval_Matrix__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Approval_Matrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers approval matrix that will be used for approving NC.</description>
    <inlineHelpText>Approval matrix containing the approval steps to be used for the NC.</inlineHelpText>
    <label>Approval Matrix</label>
    <lookupFilter>
        <active>true</active>
        <description>Lookup filter to filter out only Approval Matrix of record type Nonconformance.</description>
        <filterItems>
            <field>compliancequest__SQX_Approval_Matrix__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Nonconformance</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>compliancequest__SQX_Approval_Matrix__c</referenceTo>
    <relationshipLabel>Nonconformance</relationshipLabel>
    <relationshipName>SQX_Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>