force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business unit for Nonconformance. Lookup relationship with Business Unit Object</description>
    <label>Business Unit</label>
    <referenceTo>compliancequest__SQX_Business_Unit__c</referenceTo>
    <relationshipLabel>Nonconformance</relationshipLabel>
    <relationshipName>SQX_Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>