force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_CAPA__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_CAPA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains CAPA that has been linked to NC</description>
    <label>Related CAPA</label>
    <referenceTo>compliancequest__SQX_CAPA__c</referenceTo>
    <relationshipLabel>Nonconformances</relationshipLabel>
    <relationshipName>SQX_Nonconformances</relationshipName>
    <type>Lookup</type>
</CustomField>