force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Defect_Code__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Defect_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The defect code that is being referred by this defect</description>
    <inlineHelpText>Specify the appropriate code that identifies the defect.</inlineHelpText>
    <label>Defect Code</label>
    <lookupFilter>
        <active>true</active>
        <description>Lookup filter to filter out Active Defect code.</description>
        <filterItems>
            <field>compliancequest__SQX_Defect_Code__c.compliancequest__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>compliancequest__SQX_Defect_Code__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Non-Complaint Related</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>compliancequest__SQX_Defect_Code__c</referenceTo>
    <relationshipLabel>Nonconformance</relationshipLabel>
    <relationshipName>SQX_NC_Defects1</relationshipName>
    <type>Lookup</type>
</CustomField>