force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Department__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used to record the ID of the queue which is responsible for triaging and analyzing this NC. Since, SF doesn&apos;t support a lookup on Queue, this text field will store queue&apos;s ID. Once a record is submitted for further processing the owner of the record will be changed to the this fields value.</description>
    <inlineHelpText>The department that is responsible for the NC.</inlineHelpText>
    <label>Department</label>
    <referenceTo>compliancequest__SQX_Department__c</referenceTo>
    <relationshipLabel>Nonconformance</relationshipLabel>
    <relationshipName>SQX_Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>