force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Disposition_Approver__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Disposition_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The approver who will be responsible for approving/rejecting dispositions submitted for this NC.</description>
    <label>Disposition Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SQX_NCs_To_Approve</relationshipName>
    <type>Lookup</type>
</CustomField>