force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Division__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links Non-conformace to a division object</description>
    <label>Division</label>
    <referenceTo>compliancequest__SQX_Division__c</referenceTo>
    <relationshipLabel>Nonconformance</relationshipLabel>
    <relationshipName>SQX_Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>