force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_External_Contact__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_External_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the person/contact who is responsible for responding to this NC.</description>
    <inlineHelpText>The contact from the supplier or customer that will be involved with the NC.</inlineHelpText>
    <label>External Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <description>Lookup filter to filter out Contacts based on Account selected.</description>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.compliancequest__SQX_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Non-conformances</relationshipLabel>
    <relationshipName>SQX_Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>