force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Finding__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Finding__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field relates to the main/primary finding which drives the response in this NC object. The primary finding records information such as the severity, closure comment, related responses, approved investigation, approved root causes etc.</description>
    <label>Primary Finding</label>
    <referenceTo>compliancequest__SQX_Finding__c</referenceTo>
    <relationshipLabel>Non-conformances</relationshipLabel>
    <relationshipName>SQX_NCs</relationshipName>
    <type>Lookup</type>
</CustomField>