force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Impacted_Part__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Impacted_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will record the part which is impacted in the organization.</description>
    <inlineHelpText>The nonconforming part.</inlineHelpText>
    <label>Impacted Part</label>
    <lookupFilter>
        <active>true</active>
        <description>Lookup filter to filter out active impacted parts.</description>
        <filterItems>
            <field>compliancequest__SQX_Part__c.compliancequest__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>compliancequest__SQX_Part__c</referenceTo>
    <relationshipLabel>Nonconformance (Impacted Part)</relationshipLabel>
    <relationshipName>SQX_NC_Impacted_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>