force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures user Id who initiates Flow</description>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>