force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Inspection__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Inspection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Records the inspection from which NC is created.</description>
    <label>Inspection</label>
    <referenceTo>compliancequest__SQX_Inspection__c</referenceTo>
    <relationshipLabel>Nonconformance</relationshipLabel>
    <relationshipName>SQX_Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>