force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Investigation__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records investigation that are created this NC</description>
    <label>Investigation</label>
    <referenceTo>compliancequest__SQX_Investigation__c</referenceTo>
    <relationshipLabel>Nonconformances</relationshipLabel>
    <relationshipName>SQX_Nonconformances</relationshipName>
    <type>Lookup</type>
</CustomField>