force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Investigation_Approver__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Investigation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It specifies the Approver for an Investigation.</description>
    <label>Investigation Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SQX_NC_Investigation_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>