force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Location__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location at which the NC is raised.</description>
    <label>Location</label>
    <referenceTo>compliancequest__SQX_Location__c</referenceTo>
    <relationshipLabel>Nonconformances</relationshipLabel>
    <relationshipName>SQX_Nonconformances</relationshipName>
    <type>Lookup</type>
</CustomField>