force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Part__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defective Part</description>
    <inlineHelpText>The nonconforming product that the NC will address.</inlineHelpText>
    <label>Product</label>
    <referenceTo>compliancequest__SQX_Part__c</referenceTo>
    <relationshipLabel>Nonconformances</relationshipLabel>
    <relationshipName>SQX_Nonconformances</relationshipName>
    <type>Lookup</type>
</CustomField>