force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Service__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It indicates the Service which is related to the Nonconformance</description>
    <inlineHelpText>The nonconforming service that the NC will address.</inlineHelpText>
    <label>Service</label>
    <referenceTo>compliancequest__SQX_Standard_Service__c</referenceTo>
    <relationshipLabel>Nonconformances</relationshipLabel>
    <relationshipName>SQX_Nonconformances</relationshipName>
    <type>Lookup</type>
</CustomField>