force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Site__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Site relating to a Nonconformance. Related to SIte object</description>
    <label>Site</label>
    <referenceTo>compliancequest__SQX_Site__c</referenceTo>
    <relationshipLabel>Nonconformance</relationshipLabel>
    <relationshipName>SQX_Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>