force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__SQX_Supplier_Deviation__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Supplier_Deviation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field refers to related Supplier Deviation of Nonconformance record.</description>
    <label>Supplier Deviation</label>
    <referenceTo>compliancequest__SQX_Supplier_Deviation__c</referenceTo>
    <relationshipLabel>Nonconformance</relationshipLabel>
    <relationshipName>Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>