force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Sublot_Number__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Sublot_Number__c</fullName>
    <description>This field will record sublot number of the impacted part</description>
    <inlineHelpText>The nonconforming sub lot.</inlineHelpText>
    <label>Sublot Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>