force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Title__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Title__c</fullName>
    <description>[DEPRECATED] The title of the NC, which is the same as the primary finding&apos;s title, hence a formula field</description>
    <formula>compliancequest__SQX_Finding__r.compliancequest__Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>