force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Total_Impacted_Lot_Quantities__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Total_Impacted_Lot_Quantities__c</fullName>
    <description>This is the total of all impacted lot quantity that are mentioned in the nonconformance.</description>
    <inlineHelpText>Total lot quantity affected from all the impacted part(s) identified.</inlineHelpText>
    <label>Total Impacted Lot Quantity</label>
    <summarizedField>compliancequest__SQX_NC_Impacted_Product__c.compliancequest__Lot_Quantity__c</summarizedField>
    <summaryForeignKey>compliancequest__SQX_NC_Impacted_Product__c.compliancequest__SQX_Nonconformance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>