force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Total_Impacted_Lot_Quantity__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Total_Impacted_Lot_Quantity__c</fullName>
    <description>[DEPRECATED] Total impacted lot quantity that is set in the primary finding.</description>
    <formula>compliancequest__SQX_Finding__r.compliancequest__Total_Impacted_Lot_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Impacted Lot Quantity(Obsolete)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>