force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Total_Quantities_Disposed__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Total_Quantities_Disposed__c</fullName>
    <description>This is the grand total of all quantity of impacted product that has been disposed.</description>
    <label>Total Quantity Dispositioned</label>
    <summarizedField>compliancequest__SQX_NC_Impacted_Product__c.compliancequest__Total_Quantity_Disposed__c</summarizedField>
    <summaryForeignKey>compliancequest__SQX_NC_Impacted_Product__c.compliancequest__SQX_Nonconformance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>