force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Total_Quantity_Disposed__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Total_Quantity_Disposed__c</fullName>
    <description>[DEPRECATED] The total quantity of impacted part/lot disposed.</description>
    <formula>compliancequest__SQX_Finding__r.compliancequest__Total_Quantity_Disposed__c</formula>
    <label>Total Quantity Dispositioned (Obsolete)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>