force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Type__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Type__c</fullName>
    <description>This field stores the information regarding the type of NC object.</description>
    <inlineHelpText>The type of NC which can be Customer, Internal, or Supplier.</inlineHelpText>
    <label>NC Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>