force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Type_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Type_Of_Issue__c</fullName>
    <description>Records whether an NC has defecting product or a process.</description>
    <inlineHelpText>The type of issue which can be Product or Process.</inlineHelpText>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>