force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Unit_of_Measure__c</fullName>
    <description>Records the unit of measurement of the product</description>
    <inlineHelpText>Measuring unit for the nonconforming product.</inlineHelpText>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>compliancequest__SQX_Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>