force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Account_Contact_Reqd_Supplier_Typ.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Account_Contact_Reqd_Supplier_Typ</fullName>
    <active>true</active>
    <description>Ensure that account and contact are not blank for supplier type NC</description>
    <errorConditionFormula>AND( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission),  ISPICKVAL( compliancequest__Type__c , &apos;Supplier&apos;) , 
            OR
            ( 
                ISBLANK( compliancequest__SQX_Account__c ) ,
                ISBLANK(compliancequest__SQX_External_Contact__c ) 
            )
        )</errorConditionFormula>
    <errorDisplayField>compliancequest__SQX_Account__c</errorDisplayField>
    <errorMessage>Account and Contact are required</errorMessage>
</ValidationRule>