force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Atleast_One_Policy_Is_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Atleast_One_Policy_Is_Selected</fullName>
    <active>true</active>
    <description>Ensure that atleast one Policy is checked before initiating NC.</description>
    <errorConditionFormula>AND( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), 
ISCHANGED( compliancequest__Activity_Code__c ),
compliancequest__Activity_Code__c  == &apos;takeownershipandinitiate&apos;,
AND(( !compliancequest__Disposition_Required__c ),
( !compliancequest__Containment_Required__c ),
( !compliancequest__Investigation_Required__c )
)

)</errorConditionFormula>
    <errorMessage>No policy has been enabled. Atleast one policy must be enabled in order to Initiate NC.</errorMessage>
</ValidationRule>