force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Containment_Due_Date_cannot_be_Past_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Containment_Due_Date_cannot_be_Past_Date</fullName>
    <active>true</active>
    <description>This validation rule prevents changing of Containment Due date to Past date.</description>
    <errorConditionFormula>AND(NOT($Permission.compliancequest__SQXDataMigrationCustomPermission),
ISCHANGED( compliancequest__Due_Date_Containment__c ),
compliancequest__Due_Date_Containment__c &lt; TODAY()

)</errorConditionFormula>
    <errorDisplayField>compliancequest__Due_Date_Containment__c</errorDisplayField>
    <errorMessage>Containment Due Date cannot be past date.</errorMessage>
</ValidationRule>