force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__CQ_Ensure_Non_Complaint_Defect_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__CQ_Ensure_Non_Complaint_Defect_Code</fullName>
    <active>true</active>
    <description>The defects listed for selection under Defect Code are from record type=Non Complaint</description>
    <errorConditionFormula>AND(NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), 
    NOT(ISBLANK( compliancequest__SQX_Defect_Code__c ) ) ,
	OR(compliancequest__SQX_Defect_Code__r.compliancequest__Active__c = false,
	compliancequest__SQX_Defect_Code__r.RecordType.Name &lt;&gt; &apos;Non-Complaint Related&apos;)
	)</errorConditionFormula>
    <errorDisplayField>compliancequest__SQX_Defect_Code__c</errorDisplayField>
    <errorMessage>Defect Code should be active and of Record Type Non-Complaint Related</errorMessage>
</ValidationRule>