force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__CQ_Prevent_Modification_Of_Locked_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__CQ_Prevent_Modification_Of_Locked_Record</fullName>
    <active>true</active>
    <description>Void and Closed Records cannot be edited</description>
    <errorConditionFormula>IF (
    AND(
        NOT($Permission.compliancequest__SQXDataMigrationCustomPermission),
        PRIORVALUE(compliancequest__Is_Locked__c),
        NOT(ISCHANGED(compliancequest__Num_of_Incomplete_Actions__c))
    ), 
    IF (ISCHANGED(compliancequest__Activity_Code__c), 
        AND (NOT ISBLANK(compliancequest__Activity_Code__c), 
        compliancequest__Activity_Code__c != &apos;reopen&apos;),
        true
    ),
    false
)</errorConditionFormula>
    <errorMessage>Record Status does not support the Action Performed.</errorMessage>
</ValidationRule>