force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__CQ_Prevent_NC_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__CQ_Prevent_NC_Close</fullName>
    <active>true</active>
    <description>This validation rule ensures NC record is not closed unless completed</description>
    <errorConditionFormula>AND ( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), 
NOT( ISPICKVAL(PRIORVALUE( compliancequest__Status__c ),&apos;Complete&apos;)),
 (compliancequest__Activity_Code__c == &apos;close&apos;),NOT(ISPICKVAL(compliancequest__Resolution__c , &apos;Void&apos;)))</errorConditionFormula>
    <errorMessage>NC record can only be closed from Complete Status.</errorMessage>
</ValidationRule>