force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__CQ_Prevent_NC_From_Initiating.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__CQ_Prevent_NC_From_Initiating</fullName>
    <active>true</active>
    <description>This validation rule ensures that record is not initiated more than once.</description>
    <errorConditionFormula>AND ( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), 
NOT(ISPICKVAL(PRIORVALUE( compliancequest__Record_Stage__c ),&apos;Triage&apos;)),
compliancequest__Activity_Code__c == &apos;takeownershipandinitiate&apos;,compliancequest__Is_Locked__c == False
)</errorConditionFormula>
    <errorMessage>NC record can only be initiated from Triage Stage.</errorMessage>
</ValidationRule>