force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__CQ_Prevent_NC_Reopen.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__CQ_Prevent_NC_Reopen</fullName>
    <active>true</active>
    <description>Prevents NC from Reopen from Invalid Status</description>
    <errorConditionFormula>AND( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), NOT(OR(ISPICKVAL(PRIORVALUE(compliancequest__Status__c) , &apos;Closed&apos; ), ISPICKVAL(PRIORVALUE(compliancequest__Status__c) , &apos;Void&apos; ))), compliancequest__Activity_Code__c == &apos;reopen&apos;)</errorConditionFormula>
    <errorMessage>NC can only be reopened from Closed and Void Statuses.</errorMessage>
</ValidationRule>