force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__CQ_Prevent_NC_Reopen_Investigation.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__CQ_Prevent_NC_Reopen_Investigation</fullName>
    <active>true</active>
    <description>Prevents NC from Reopen Investigation from Invalid Status</description>
    <errorConditionFormula>AND( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), NOT(ISBLANK( compliancequest__SQX_Investigation__c )),
  compliancequest__Activity_Code__c  = &apos;reopeninvestigation&apos;,
NOT( ISPICKVAL( compliancequest__SQX_Investigation__r.compliancequest__Status__c ,&apos;Completed&apos;))
)</errorConditionFormula>
    <errorMessage>Unable to perform the desired action. Investigation is not yet complete</errorMessage>
</ValidationRule>