force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__CQ_Prevent_NC_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__CQ_Prevent_NC_Submit</fullName>
    <active>false</active>
    <description>This vaildation rule prevents from double submitting a record.</description>
    <errorConditionFormula>AND ( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), 
    NOT(
        AND(
            ISPICKVAL(PRIORVALUE(compliancequest__Record_Stage__c),&apos;Draft&apos;),
            ISPICKVAL(PRIORVALUE(compliancequest__Status__c),&apos;Draft&apos;)
        )
    ),
    compliancequest__Activity_Code__c == &apos;submit&apos;,compliancequest__Is_Locked__c == False
)</errorConditionFormula>
    <errorMessage>NC can only be submitted from Draft status and Draft stage.</errorMessage>
</ValidationRule>