force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Defective_Quantity_Is_Less_Than_Impacted.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Defective_Quantity_Is_Less_Than_Impacted</fullName>
    <active>true</active>
    <description>Defective Quantity is less than or equals to Impacted Part/Lot quantity.</description>
    <errorConditionFormula>AND( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), compliancequest__Defective_Quantity__c &gt;  compliancequest__Lot_Quantity__c)</errorConditionFormula>
    <errorMessage>Defective Quantity is greater than Lot Quantity.</errorMessage>
</ValidationRule>