force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Disposition_Due_Date_cannot_be_Past_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Disposition_Due_Date_cannot_be_Past_Date</fullName>
    <active>true</active>
    <description>This validation rule prevents changing of Disposition Due date to less than current date.</description>
    <errorConditionFormula>AND(NOT($Permission.compliancequest__SQXDataMigrationCustomPermission),
ISCHANGED( compliancequest__Due_Date_Disposition__c ),
compliancequest__Due_Date_Disposition__c&lt; TODAY()

)</errorConditionFormula>
    <errorDisplayField>compliancequest__Due_Date_Disposition__c</errorDisplayField>
    <errorMessage>Disposition Due Date cannot be past date.</errorMessage>
</ValidationRule>